// pscrud
// pub sub create read update delete
// used by generate-proto.sh to generate server and client GRPC interface code

syntax = "proto3";

package grpc;

message Request {
    string session = 1;
}

message Response {
    bool ok = 1;
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    bool ok = 1;
    string session = 2;
}

message PutRequest {
    string key = 1;
    string id = 2;
    bytes data = 3;
    string session = 4;
}

message PutResponse {
    bool ok = 1;
    string id = 2;
}

message GetRequest {
    string key = 1;
    string id = 2;
//    uint32 skip = 3;
//    uint32 limit = 4;
    string session = 5;
}

message Datum {
    string id = 1;
    bytes data = 2;
}

message GetResponse {
    bool ok = 1;
    repeated Datum data = 2;
}

message PublishRequest {
    string session = 1;
    string topic = 2;
    bytes data = 3;
}

message SubscribeRequest {
    string session = 1;
    string topic = 2;
}

message Publication {
    string id = 1;
    string topic = 2;
    bytes data = 3;
}


service Pscrud {
    rpc Register (AuthRequest) returns (AuthResponse);
    rpc Login (AuthRequest) returns (AuthResponse);
    rpc Authenticate (Request) returns (AuthResponse);
    rpc Logout (Request) returns (Response);
    rpc Deregister (Request) returns (Response);

    rpc Create (PutRequest) returns (PutResponse);
    rpc Read (GetRequest) returns (GetResponse);
    rpc Update (PutRequest) returns (PutResponse);
    rpc Delete (GetRequest) returns (Response);

    rpc Subscribe (SubscribeRequest) returns (Response);
    rpc Unsubscribe (SubscribeRequest) returns (Response);
    rpc Publish (PublishRequest) returns (Response);
    rpc Listen (Request) returns (stream Publication);
}
